Name:               hneuron
Version:            0.1
License:            BSD3
License-file:       LICENSE
Copyright:          (c) A.V.H. McPhail, 2014
Author:             Vivian McPhail
Maintainer:         haskell.vivian.mcphail <at> gmail <dot> com
Stability:          provisional
Homepage:           http://code.haskell.org/hneuron
Synopsis:           Statistics, Maths, Mathematics
Description:        
     Biophysics concurrent, parallel neural modeller
     .
     Feature requests, suggestions, and bug fixes welcome.
Category:           Math, Statistics
tested-with:        GHC ==7.8.3

cabal-version:      >=1.8

build-type:         Simple

extra-source-files: README INSTALL CHANGES
extra-tmp-files:    hneuron.buildinfo

library

    Build-Depends:      base >= 4 && < 5,
                        array, random,
                        vector,
                        hmatrix >= 0.10.0.0,
--                        hmatrix-gsl-stats >= 0.1.2.9

    Extensions:         

    hs-source-dirs:     src
    Exposed-modules:    Numeric.Neuron
                        Numeric.Neuron.Types
    other-modules:      
    C-sources:          

    ghc-prof-options:   -auto

    ghc-options:        -Wall -fno-warn-missing-signatures
                              -fno-warn-orphans
                              -fno-warn-unused-binds
                        -O2

source-repository head
    type:     git
    location: https://github.com/amcphail/hneuron.git

